--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                             <p>Inchoo Project | Magento</p>
                         </div>
                         <div class="containerWork__imageWrapper">
-                            <img src="images/minified/prj-aa-min.jpg" class="loaded" />
+                            <img data-src="images/minified/prj-aa-min.jpg" />
                         </div>
                     </a>
                 </li>
