--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <li>Adores Calvin & Hobbes Comics</li>
                     <li>Aspiring Air Pistol Marksman</li>
                 </ul>
-                <a class="button button-cta containerHero__button" href="#">Read My CV <span class="icon button__icon icon-right-dir"></span></a>
+                <a class="button button-cta containerHero__button" target="_blank" rel="noopener noreferrer" href="./docs/Adrian_Bece_CV.pdf">Read My CV <span class="icon button__icon icon-right-dir"></span></a>
             </div>
         </article>
         <article class="containerHero__wrapper containerHero__wrapper--imageContainer">
