--- a/index.html
+++ b/index.html
@@ -232,8 +232,10 @@
                                 <td>September 26th 1991.</td>
                             </tr>
                             <tr>
-                                <th>Location: </th>
-                                <td>Osijek, Croatia</td>
+                                <th>Personality: </th>
+                                <td>
+                                    <a href="https://www.16personalities.com/infj-personality" target="_blank" rel="noopener noreferrer">INFJ-T</a>
+                                </td>
                             </tr>
                             <tr>
                                 <th>Education: </th>
