--- a/skills/index.html
+++ b/skills/index.html
@@ -12,7 +12,7 @@ collectionpage: services
 <main class="main">
     <section class="container--alt banner banner--center">
         <article class="banner__container">
-            <h2 class="banner__text skills__title">Development Skills</h2>
+            <h2 class="banner__text services__title">Development Skills</h2>
         </article>
     </section>
     <section class="featuredList glide" id="js-services-1">
@@ -108,7 +108,7 @@ collectionpage: services
     </section>
     <section class="container--alt banner banner--center">
         <article class="banner__container">
-            <h2 class="banner__text skills__title">Additional Skills</h2>
+            <h2 class="banner__text services__title">Additional Skills</h2>
         </article>
     </section>
     <section class="featuredList glide" id="js-services-2">
@@ -142,16 +142,30 @@ collectionpage: services
                 </article>
                 <article class="featuredList__item glide__slide">
                     <div class="featuredList__icon featuredList__icon--default">
+                        <span class="icon icon__communication"></span>
+                    </div>
+                    <h3 class="title--secondary  featuredList__title">
+                        Public Speaking
+                    </h3>
+                    <div class="featuredList__text">
+                        I have attended several Meet Magento events and gave a
+                        presentation at Meet Magento 2018 Poland. I also gave
+                        presentations on several online demos for Magento
+                        Community Engineering Youtube Channel.
+                    </div>
+                </article>
+                <article class="featuredList__item glide__slide">
+                    <div class="featuredList__icon featuredList__icon--default">
                         <span class="icon icon__social--email"></span>
                     </div>
                     <h3 class="title--secondary  featuredList__title">
-                        Project management
+                        Project Management
                     </h3>
                     <div class="featuredList__text">
                         I have experience in managing small-scale projects,
-                        team-leadership, soft skills, and customer relations.
-                        Maintaining great customer relations along with the code
-                        is key to any project's success!
+                        team-leadership, soft skills, organizational skills, and
+                        customer relations. Maintaining great customer relations
+                        along with the code is key to any project's success!
                     </div>
                 </article>
             </div>
@@ -217,7 +231,7 @@ collectionpage: services
         rewind: false,
         touchRatio: 0,
         gap: 0,
-        perView: 3,
+        perView: 4,
         breakpoints: {
             568: {
                 touchRatio: 0.5,
