--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ hero_text:
         <strong>efficient </strong>code.
     </article>
 </section>
-<section class="featuredList glide" id="js-services">
+<section class="featuredList glide" id="js-skills">
     <div class="glide__track" data-glide-el="track">
         <div class="glide__slides featuredList__items">
             <article class="featuredList__item glide__slide">
@@ -183,7 +183,7 @@ hero_text:
     featuredWorkJs.mount();
 </script>
 <script>
-    new Glide("#js-services", {
+    new Glide("#js-skills", {
         type: "slider",
         bound: true,
         rewind: false,
